--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-12 about-title text-center">
-                    <h1 class="brdr">ABOUT ME</h1>
+                    <h1 class="brdr shadowx">ABOUT ME</h1>
                 </div>
             </div>
             <div class="row">
@@ -90,7 +90,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-12 service-item text-center">
-                    <h1 class="brdr2">What I Do</h1>
+                    <h1 class="brdr2 shadowx">What I Do</h1>
                     <h3>Beautiful. Clean. Responsive.</h3>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quae voluptas voluptatibus quas consectetur doloremque ad libero iure sunt nisi non.</p>
                 </div>
@@ -200,7 +200,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-12 team-title text-center py-4">
-                    <h2 class="brdr3">MY TEAM MEMBERS</h2>
+                    <h2 class="brdr3 shadowx">MY TEAM MEMBERS</h2>
                 </div>
             </div>
             <div class="row">
